# syosetu-rs

./: .gitignore  AGENTS.md  Cargo.toml
src/: app.rs  main.rs  memory.rs  syosetu.rs  ui.rs
